Fixed scrolling when you drag on mobile

--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
 canvas {
     display:block;
 }
+
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
